--- a/index.html
+++ b/index.html
@@ -4,154 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roommate Quiz</title>
-    <style>
-        /* General Styling */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-
-        /* Quiz Container Styling */
-        .quiz-container {
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            width: 100%;
-            animation: fadeIn 1s ease; /* Fade-in animation */
-        }
-
-        /* Title Styling */
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 28px;
-            color: #333;
-        }
-
-        /* Hidden Class */
-        .hidden {
-            display: none;
-        }
-
-        /* Button Styling */
-        .btn {
-            display: block;
-            width: 100%;
-            padding: 15px 0;
-            margin-bottom: 20px;
-            background-color: #ff6b6b; /* Red button */
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 2s ease;
-        }
-
-        .btn:hover {
-            background-color: #e74c3c; /* Darker red on hover */
-        }
-
-        /* Question Container Styling */
-        .question-container {
-            margin-bottom: 30px;
-        }
-
-        #question {
-            font-size: 20px;
-            color: #333;
-        }
-
-        /* Answer Buttons Styling */
-        .answer-buttons {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .answer-buttons button {
-            padding: 10px 20px;
-            margin-bottom: 10px;
-            background-color: #3498db; /* Blue button */
-            color: #fff;
-            border: 1px solid #2980b9; /* Darker blue border */
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 2s ease, color 2s ease;
-        }
-
-        .answer-buttons button:hover {
-            background-color: #2980b9; /* Darker blue on hover */
-        }
-
-        /* Progress Container Styling */
-        .progress-container {
-            margin-bottom: 30px;
-        }
-
-        .progress-bar {
-            background-color: #2ecc71; /* Green progress bar */
-            height: 20px;
-            border-radius: 4px;
-            margin-bottom: 10px;
-            animation: progressBarAnimation 3s ease;
-        }
-
-        /* Progress Text Styling */
-        .progress-text {
-            text-align: center;
-            font-size: 16px;
-            color: #666;
-        }
-
-        /* Result Container Styling */
-        .result-container {
-            text-align: center;
-        }
-
-        .result-container h2 {
-            margin-bottom: 20px;
-            font-size: 24px;
-            color: #333;
-        }
-
-        .result-container p {
-            font-size: 16px;
-            color: #666;
-        }
-
-        /* Animation Keyframes */
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes progressBarAnimation {
-            from { width: 0; }
-            to { width: 100%; }
-        }
-
-        /* Rainbow Background Animation */
-        body {
-            animation: rainbowBackground 30s infinite; /* Rainbow background animation */
-        }
-
-        @keyframes rainbowBackground {
-            0% { background-color: #ff0000; }
-            16.67% { background-color: #ff7f00; }
-            33.33% { background-color: #ffff00; }
-            50% { background-color: #00ff00; }
-            66.67% { background-color: #0000ff; }
-            83.33% { background-color: #4b0082; }
-            100% { background-color: #9400d3; }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
