--- a/index.html
+++ b/index.html
@@ -4,32 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roommate Quiz</title>
-    <!-- Use relative path for CSS file -->
     <link rel="stylesheet" href="./styling/style.css"> 
 </head>
 <body>
 
-<div class="quiz-container">
-    <h1>Roommate Quiz</h1>
+<!-- Introduction Container -->
+<div class="introduction-container" id="intro-container">
+    <h1>Welcome to the Roommate Quiz!</h1>
+    <p>Find out what type of roommate you are.</p>
+    <button id="begin-quiz-btn" class="btn">Start Quiz</button>
+</div>
 
+<!-- Email Signup Container (Initially Hidden) -->
+<div class="email-signup-container hidden" id="email-signup-container">
+    <p>Sign up with your email to start the quiz!</p>
+    <form id="email-signup-form">
+        <input type="email" id="email-input" placeholder="Enter your email" required>
+        <button type="submit" class="btn">Sign Up</button>
+    </form>
+</div>
+
+<!-- Quiz Container (Initially Hidden) -->
+<div class="quiz-container hidden" id="question-container">
     <div class="progress-container">
         <div class="progress-bar" id="progress-bar"></div>
         <div class="progress-text" id="progress-text"></div>
     </div>
 
-    <div class="question-container hidden" id="question-container">
+    <div class="question-container" id="question-container">
         <p id="question"></p>
         <div class="answer-buttons" id="answer-buttons"></div>
     </div>
 
     <div class="result-container hidden" id="result-container">
-        <!-- This will be populated by script.js based on quiz results -->
+        <!-- Results will be populated here -->
     </div>
-
-    <button id="start-btn" class="btn">Start Quiz</button>
 </div>
 
-<!-- Use relative paths for JavaScript files -->
 <script src="./Questions_Descriptions/descriptions.js"></script>
 <script src="./Questions_Descriptions/questions.js"></script>
 <script src="./logic/script.js"></script>
