--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </div>
     </div>
 
-    <script src="./Questions_Descriptions\descriptions.js"></script>
-    <script src="./Questions_Descriptions\questions.js"></script>
+    <script src="./Questions_Descriptions/descriptions.js"></script>
+    <script src="./Questions_Descriptions/questions.js"></script>
     <script src="./logic/script.js"></script>
 </body>
 </html>
+
